# loco-works-management-system

./: .env.example  .gitignore  LICENSE.md  README.md  docker-compose.prod.yml  docker-compose.yml  seed_data.sql
backend/: Dockerfile  pyproject.toml  seed_designations.py  seed_jobs.py
backend/alembic/: env.py
backend/alembic/versions/: 08a0dd986018_add_password_to_loco_admin.py  08d71d939c4d_sync_schema_drift.py  43c45606d0c9_add_nonce_and_employee_portal_enabled_.py  598fa387f3e1_add_shift_to_loco_bookings.py  5bab562f2510_check_schema_drift.py  76d4224920a1_update_loco_bookings_schema.py  7e349de4489d_initial_migration.py  84d3b6852ab3_make_tasks_serial.py  85520895ddf2_restore_composite_pk.py  87b7d18785c8_make_booking_id_serial.py  8b5d6b182088_restore_task_id_non_nullable.py  8c9aea95b910_add_despatch_date_to_loco.py  8dcfb4bbf5e9_add_shift_to_loco_bookings.py  9a58111354de_attach_audit_triggers_new_tables.py  9e8144280b4c_add_despatched_to_loco.py  9f8e7d6c5b4a_attach_audit_triggers_all_tables.py  a3fd9f729cb9_drop_unused_tasks_table.py  b1e2f3a4c5d6_add_loco_admin_and_registration_requests.py  b71a2f3fcd11_implement_booking_tasks_relationship.py  c29ca691d8a5_cascade_loco_delete.py
backend/app/: main.py
backend/app/core/: audit.py  base.py  config.py  database.py  email.py  exceptions.py  loco_encoder.py  redis.py  security.py
backend/app/features/admin/: models.py  router.py  schemas.py
backend/app/features/assessments/: router.py  schemas.py
backend/src/: main.py
backend/src/core/: audit.py  base.py  config.py  database.py  redis.py  security.py
(+178 files in other folders)
