[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.2",
    "fastapi>=0.137.1",
    "hiredis>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "setuptools>=82.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
    "websockets>=11.0",
]
